--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,11 @@ main:
   - title: "News"
     url: /news/
 
-  - title: "People"
-    url: /people/
+  - title: "Members"
+    url: /members/
+
+  - title: "Alumni"
+    url: /alumni/
 
   - title: "Research"
     url: /research/
